--- a/app/views/download_mailer/download_email.text.erb
+++ b/app/views/download_mailer/download_email.text.erb
@@ -1,7 +1,14 @@
-Welcome to example.com, <%= @download.firstName %>
+Thanks for downloading SimpleOpenServer, <%= @download.firstName %>
 ===============================================
  
-You have successfully signed up to example.com,
-your link is: <%= @download.link %>.
+To view the downloads available, follow the link below:
+<%= download_url %>/<%= @download.link %>
  
-Thanks for joining and have a great day!
+For any troubles downloading SimpleOpenServer, please contact
+
+Patricio Panichelli
+(patricio.panichelli@gmail.com)
+
+Have a nice day!
+
+Simple Open Server | OpenServer code done right
