--- a/app/views/downloads/show.html.erb
+++ b/app/views/downloads/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<h1>Download Center</h1>
+
 <p>
   <strong>Firstname:</strong>
   <%= @download.firstName %>
@@ -15,9 +17,11 @@
   <%= @download.email %>
 </p>
 
-<p>
-  <strong>Link:</strong>
-  <%= @download.link %>
-</p>
+<p> Your downloads : </p>
+link1
+link2
+link3
+link4
+link5
 
 <%= link_to 'Back', root_path %>
