--- a/app/views/downloads/new.html.erb
+++ b/app/views/downloads/new.html.erb
@@ -1,3 +1,4 @@
-<h1>New Download</h1>
+<h1>DOWNLOAD FORM</h1>
+<p>Please enter your email and name to receive the download link.</p>
 
 <%= render 'form' %>
