--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>Homepage</h1>
+<p>Initial page, links to the docs and other things</p>
 <%= content_tag(:div, flash[:notice]) if flash[:notice] %>
+<%= link_to "Download", download_path %>
