Add download of files

--- a/app/views/downloads/show.html.erb
+++ b/app/views/downloads/show.html.erb
@@ -18,10 +18,7 @@
 </p>
 
 <p> Your downloads : </p>
-link1
-link2
-link3
-link4
-link5
+
+<%= link_to "RIO", file_download_path(:link=>@download.link, :file_name =>"RIO1", :file_extension =>"jpg") %>
 
 <%= link_to 'Back', root_path %>
