--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-<%= yield %>
+<%= render 'layouts/header' %>
+
+<div class="container">
+
+	<%= yield %>
+
+	<%= render 'layouts/footer' %>
+
+</div>
 
 </body>
 </html>
